--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,12 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.local.ts",
+                  "with": "src/environments/environment.production.ts"
+                }]
             },
             "development": {
               "buildOptimizer": false,
