--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,8 @@
                 {
                   "replace": "src/environments/environment.local.ts",
                   "with": "src/environments/environment.production.ts"
-                }]
+                }
+              ]
             },
             "development": {
               "buildOptimizer": false,
@@ -109,5 +110,10 @@
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
   }
 }
